dealing with categorical columns

--- a/Arvato Project Workbook.ipynb
+++ b/Arvato Project Workbook.ipynb
@@ -167,15 +167,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of columns in Customers Data -  369\n",
-      "Number of columns in Azdius Data -  366\n",
+      "Number of columns in Customers Data -  355\n",
+      "Number of columns in Azdius Data -  352\n",
       "Extra columns in Customers Data -  ['PRODUCT_GROUP', 'CUSTOMER_GROUP', 'ONLINE_PURCHASE']\n"
      ]
     }
@@ -9397,14 +9397,14 @@
       "Replacing [[-1]] to NaN in Attribute KBA13_KW_40\n",
       "Replacing [[-1]] to NaN in Attribute KBA13_KW_50\n",
       "Replacing [[-1]] to NaN in Attribute KBA13_KW_60\n",
-      "Replacing [[-1]] to NaN in Attribute KBA13_KW_0_60\n"
+      "Replacing [[-1]] to NaN in Attribute KBA13_KW_0_60\n",
+      "Replacing [[-1]] to NaN in Attribute KBA13_KW_70\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Replacing [[-1]] to NaN in Attribute KBA13_KW_70\n",
       "Replacing [[-1]] to NaN in Attribute KBA13_KW_61_120\n",
       "Replacing [[-1]] to NaN in Attribute KBA13_KW_80\n",
       "Replacing [[-1]] to NaN in Attribute KBA13_KW_90\n",
@@ -9630,7 +9630,7 @@
     "print(f\"Azdias - {len(azdias.columns)}\")\n",
     "print(f\"Customers - {len(customers.columns)}\")\n",
     "\n",
-    "azdias, customers = data_utils.remove_missing_columns(azdias, customers, customer_missing_report, azdias_missing_report)\n",
+    "azdias, customers, removed_cols = data_utils.remove_missing_columns(azdias, customers, customer_missing_report, azdias_missing_report)\n",
     "\n",
     "print(\"Number of columns After dropping\")\n",
     "print(f\"Azdias - {len(azdias.columns)}\")\n",
@@ -9740,7 +9740,390 @@
    "metadata": {},
    "source": [
     "As seen in the above plot we have successfully removed all the rows having more than 50 missing features. But, we still have some missing values in range of *1* to *50*. We can impute most common values of corresponding features in these rows, as the data represents the demographics of population. We can make an assumption that these missing values will be equal to the most common ones.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 737288 entries, 0 to 737287\n",
+      "Columns: 355 entries, LNR to ALTERSKATEGORIE_GROB\n",
+      "dtypes: float64(264), int64(87), object(4)\n",
+      "memory usage: 2.0+ GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "azdias.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 134246 entries, 0 to 134245\n",
+      "Columns: 358 entries, LNR to ALTERSKATEGORIE_GROB\n",
+      "dtypes: float64(264), int64(88), object(6)\n",
+      "memory usage: 366.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "customers.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "azdias_object_cols = azdias.columns[azdias.dtypes == \"object\"]\n",
+    "customer_object_cols = customers.columns[customers.dtypes == \"object\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Azdias columns with dtype Object \n",
+      " ['CAMEO_DEU_2015' 'D19_LETZTER_KAUF_BRANCHE' 'EINGEFUEGT_AM' 'OST_WEST_KZ']\n",
+      "Azdias columns with dtype Object \n",
+      " ['CAMEO_DEU_2015' 'D19_LETZTER_KAUF_BRANCHE' 'EINGEFUEGT_AM' 'OST_WEST_KZ'\n",
+      " 'PRODUCT_GROUP' 'CUSTOMER_GROUP']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Azdias columns with dtype Object \\n\",azdias_object_cols.values)\n",
+    "print(\"Azdias columns with dtype Object \\n\",customer_object_cols.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Column  CAMEO_DEU_2015\n",
+      "6B    54006\n",
+      "8A    50776\n",
+      "4C    43988\n",
+      "2D    32906\n",
+      "7A    32630\n",
+      "3C    32565\n",
+      "3D    32176\n",
+      "8B    31262\n",
+      "4A    30254\n",
+      "8C    30147\n",
+      "9D    26746\n",
+      "9B    25888\n",
+      "7B    22921\n",
+      "9C    22919\n",
+      "9A    20057\n",
+      "2C    17742\n",
+      "8D    16675\n",
+      "6E    15598\n",
+      "5D    14071\n",
+      "2B    14042\n",
+      "6C    13868\n",
+      "2A    11921\n",
+      "1D    11457\n",
+      "1A    10167\n",
+      "5A     9721\n",
+      "5B     9691\n",
+      "5C     9050\n",
+      "4B     8284\n",
+      "7C     8127\n",
+      "4D     8051\n",
+      "6A     6416\n",
+      "3A     5871\n",
+      "6D     5756\n",
+      "3B     5709\n",
+      "6F     5048\n",
+      "4E     5005\n",
+      "1E     4783\n",
+      "7D     4431\n",
+      "7E     4375\n",
+      "1C     4012\n",
+      "5F     3939\n",
+      "9E     3841\n",
+      "1B     3815\n",
+      "5E     3241\n",
+      "XX      284\n",
+      "Name: CAMEO_DEU_2015, dtype: int64\n",
+      "\n",
+      "Column  D19_LETZTER_KAUF_BRANCHE\n",
+      "D19_UNBEKANNT             179081\n",
+      "D19_VERSICHERUNGEN         52220\n",
+      "D19_SONSTIGE               40546\n",
+      "D19_VOLLSORTIMENT          31292\n",
+      "D19_SCHUHE                 28486\n",
+      "D19_BUCH_CD                25643\n",
+      "D19_VERSAND_REST           23398\n",
+      "D19_DROGERIEARTIKEL        21371\n",
+      "D19_BANKEN_DIREKT          20993\n",
+      "D19_BEKLEIDUNG_REST        19147\n",
+      "D19_HAUS_DEKO              18823\n",
+      "D19_TELKO_MOBILE           13194\n",
+      "D19_ENERGIE                11146\n",
+      "D19_TELKO_REST             10478\n",
+      "D19_BANKEN_GROSS            9558\n",
+      "D19_BEKLEIDUNG_GEH          9173\n",
+      "D19_KINDERARTIKEL           6416\n",
+      "D19_FREIZEIT                6404\n",
+      "D19_TECHNIK                 6282\n",
+      "D19_LEBENSMITTEL            5814\n",
+      "D19_BANKEN_REST             4709\n",
+      "D19_RATGEBER                4483\n",
+      "D19_NAHRUNGSERGAENZUNG      3731\n",
+      "D19_DIGIT_SERV              3273\n",
+      "D19_REISEN                  2808\n",
+      "D19_TIERARTIKEL             2294\n",
+      "D19_SAMMELARTIKEL           2243\n",
+      "D19_HANDWERK                2033\n",
+      "D19_WEIN_FEINKOST           1965\n",
+      "D19_GARTEN                  1486\n",
+      "D19_BANKEN_LOKAL            1306\n",
+      "D19_BIO_OEKO                1090\n",
+      "D19_BILDUNG                  876\n",
+      "D19_LOTTO                    743\n",
+      "D19_KOSMETIK                 711\n",
+      "Name: D19_LETZTER_KAUF_BRANCHE, dtype: int64\n",
+      "\n",
+      "Column  EINGEFUEGT_AM\n",
+      "1992-02-10 00:00:00    372246\n",
+      "1992-02-12 00:00:00    187354\n",
+      "1995-02-07 00:00:00     10862\n",
+      "2003-11-18 00:00:00      5878\n",
+      "1993-03-01 00:00:00      3060\n",
+      "                        ...  \n",
+      "1999-12-15 00:00:00         1\n",
+      "1998-10-02 00:00:00         1\n",
+      "2001-08-15 00:00:00         1\n",
+      "1998-08-31 00:00:00         1\n",
+      "2004-10-10 00:00:00         1\n",
+      "Name: EINGEFUEGT_AM, Length: 2819, dtype: int64\n",
+      "\n",
+      "Column  OST_WEST_KZ\n",
+      "W    582290\n",
+      "O    154998\n",
+      "Name: OST_WEST_KZ, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in azdias_object_cols:\n",
+    "    print(\"\\nColumn \",col)\n",
+    "    print(azdias[col].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The columns \n",
     "\n",
+    "* *OST_WEST_KZ* - contains information about the history of the person i.e. which part of Germany they belonged to before unification. We can encode values in this column with pd_dummies or a label encoder.\n",
+    "\n",
+    "The columns that can be removed:\n",
+    "\n",
+    "* *EINGEFUEGT_AM* - contains the date on which the data was entered. We can drop this column, as this does not give help in the later steps.\n",
+    "\n",
+    "* *D19_LETZTER_KAUF_BRANCHE* - contains information about the last branch they made a purchase.\n",
+    "* *CAMEO_DEU_2015* - Gives information about specific group a person belongs to.\n",
+    "\n",
+    "These, columns have too much granularity in information they represent. This will increase the number of features for modeling purposes. So these columns can also be dropped for simplicity.\n",
+    "\n",
+    "\n",
+    "Removing the above specified cols. This is done by the function *remove_cols* which takes in the colums to be removed as a list already has the specified columns as a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_extra_cols = [\"EINGEFUEGT_AM\", \"D19_LETZTER_KAUF_BRANCHE\", \"CAMEO_DEU_2015\"]\n",
+    "\n",
+    "azdias = data_utils.remove_columns(azdias, remove_extra_cols)\n",
+    "customers = data_utils.remove_columns(customers, remove_extra_cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encoding *OST_WEST_KZ* column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "azdias = data_utils.fix_ost_west_col(azdias)\n",
+    "customers = data_utils.fix_ost_west_col(customers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Seperating customers dataframe into two parts, i.e. taking out the extra columns present in customers dataset as a separate dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_extra_cols = customers[extra_cols_in_customers]\n",
+    "customers = customers.drop(extra_cols_in_customers, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PRODUCT_GROUP</th>\n",
+       "      <th>CUSTOMER_GROUP</th>\n",
+       "      <th>ONLINE_PURCHASE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>COSMETIC_AND_FOOD</td>\n",
+       "      <td>MULTI_BUYER</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>COSMETIC_AND_FOOD</td>\n",
+       "      <td>MULTI_BUYER</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>COSMETIC</td>\n",
+       "      <td>MULTI_BUYER</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FOOD</td>\n",
+       "      <td>MULTI_BUYER</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>COSMETIC_AND_FOOD</td>\n",
+       "      <td>MULTI_BUYER</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       PRODUCT_GROUP CUSTOMER_GROUP  ONLINE_PURCHASE\n",
+       "0  COSMETIC_AND_FOOD    MULTI_BUYER                0\n",
+       "1  COSMETIC_AND_FOOD    MULTI_BUYER                0\n",
+       "2           COSMETIC    MULTI_BUYER                0\n",
+       "3               FOOD    MULTI_BUYER                0\n",
+       "4  COSMETIC_AND_FOOD    MULTI_BUYER                0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer_extra_cols.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally checking the shapes of all the dataframes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((737288, 352), (134246, 352), (134246, 3))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "azdias.shape, customers.shape, customer_extra_cols.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Before that, we can build a function to perform what we have done until now."
    ]
   },
@@ -9761,12 +10144,12 @@
       "\tRemoving rows with more than 50 missing values\n",
       "\t\tRemoved 57406 rows from Customers dataframe\n",
       "\t\tRemoved 153933 rows from Azdias dataframe\n",
-      "Completed Cleaning in 97.23895192146301 seconds\n"
+      "Completed Cleaning in 98.66606569290161 seconds\n"
      ]
     }
    ],
    "source": [
-    "azdias, customers = data_utils.clean_data(azdias, customers, attributes_values)"
+    "azdias, customers, cleaning_info = data_utils.clean_data(azdias, customers, attributes_values)"
    ]
   },
   {
@@ -9807,10 +10190,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned Data Exists\n",
+      "Loading Cleaned Azdias and Customers Data\n"
+     ]
+    }
+   ],
+   "source": [
+    "azdias, customers, attributes_values, attributes_info = load_avarto_data(clean=True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -9905,12 +10299,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\namod001\\Anaconda3\\envs\\Python3.7\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning: Columns (18,19) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mailout_test = pd.read_csv('./data/Udacity_MAILOUT_052018_TEST.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "mailout_test = pd.read_csv('../../data/Term2/capstone/arvato_data/Udacity_MAILOUT_052018_TEST.csv', sep=';')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
