updated data cleaning function

--- a/Arvato Project Workbook.ipynb
+++ b/Arvato Project Workbook.ipynb
@@ -92,13 +92,16 @@
     "        \n",
     "#     azdias = None\n",
     "#     customers = None\n",
+    "    customers_additional = None\n",
     "#     attributes_values = None\n",
     "#     attributes_info = None\n",
+    "\n",
     "    \n",
     "    if clean_exists:\n",
     "        print(\"Loading Cleaned Azdias and Customers Data\")\n",
     "        azdias = pd.read_csv('./data/Azdias_cleaned.csv', usecols=no_unamed)\n",
     "        customers = pd.read_csv('./data/Customers_cleaned.csv', usecols=no_unamed)\n",
+    "        customers_additional = pd.read_csv('./data/Customer_Additional_cleaned.csv', usecols=no_unamed)\n",
     "    else:\n",
     "        print(\"Loading Raw Azdias and Customers Data\")\n",
     "        azdias = pd.read_csv('./data/Udacity_AZDIAS_052018.csv', usecols=no_unamed)\n",
@@ -107,7 +110,7 @@
     "    attributes_values = pd.read_excel('./data/DIAS Attributes - Values 2017.xlsx', header=1, usecols=no_unamed)\n",
     "    attributes_info = pd.read_excel('./data/DIAS Information Levels - Attributes 2017.xlsx', header=1, usecols=no_unamed)    \n",
     "    \n",
-    "    return azdias, customers, attributes_values, attributes_info"
+    "    return azdias, customers, customers_additional, attributes_values, attributes_info"
    ]
   },
   {
@@ -132,7 +135,7 @@
     }
    ],
    "source": [
-    "azdias, customers, attributes_values, attributes_info = load_avarto_data()"
+    "azdias, customers, customers_additional, attributes_values, attributes_info = load_avarto_data()"
    ]
   },
   {
@@ -167,15 +170,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of columns in Customers Data -  355\n",
-      "Number of columns in Azdius Data -  352\n",
+      "Number of columns in Customers Data -  369\n",
+      "Number of columns in Azdius Data -  366\n",
       "Extra columns in Customers Data -  ['PRODUCT_GROUP', 'CUSTOMER_GROUP', 'ONLINE_PURCHASE']\n"
      ]
     }
@@ -9819,7 +9822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -9920,11 +9923,11 @@
       "2003-11-18 00:00:00      5878\n",
       "1993-03-01 00:00:00      3060\n",
       "                        ...  \n",
-      "1999-12-15 00:00:00         1\n",
-      "1998-10-02 00:00:00         1\n",
-      "2001-08-15 00:00:00         1\n",
-      "1998-08-31 00:00:00         1\n",
-      "2004-10-10 00:00:00         1\n",
+      "2000-02-11 00:00:00         1\n",
+      "1999-09-30 00:00:00         1\n",
+      "2000-05-12 00:00:00         1\n",
+      "2000-03-14 00:00:00         1\n",
+      "1999-07-19 00:00:00         1\n",
       "Name: EINGEFUEGT_AM, Length: 2819, dtype: int64\n",
       "\n",
       "Column  OST_WEST_KZ\n",
@@ -9963,7 +9966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9982,7 +9985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9999,7 +10002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10009,7 +10012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -10082,7 +10085,7 @@
        "4  COSMETIC_AND_FOOD    MULTI_BUYER                0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10100,7 +10103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -10109,7 +10112,7 @@
        "((737288, 352), (134246, 352), (134246, 3))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10119,17 +10122,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Before that, we can build a function to perform what we have done until now."
+    "#### Data Cleaning function\n",
+    "\n",
+    "We can combine all the steps we did above into one single function and then proceed to further steps. The *clean_data* function in *data_utils* combines all the steps above, we can load the uncleaned data once again and use this function to clean the data and verify if the function is working."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Raw Azdias and Customers Data\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\namod001\\Anaconda3\\envs\\Python3.7\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3254: DtypeWarning: Columns (18,19) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  if (await self.run_code(code, result,  async_=asy)):\n"
+     ]
+    }
+   ],
+   "source": [
+    "azdias, customers, customers_additional, attributes_values, attributes_info = load_avarto_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -10144,31 +10172,33 @@
       "\tRemoving rows with more than 50 missing values\n",
       "\t\tRemoved 57406 rows from Customers dataframe\n",
       "\t\tRemoved 153933 rows from Azdias dataframe\n",
-      "Completed Cleaning in 98.66606569290161 seconds\n"
+      "\tRemoving unwanted Columns\n",
+      "Completed Cleaning in 103.4584743976593 seconds\n"
      ]
     }
    ],
    "source": [
-    "azdias, customers, cleaning_info = data_utils.clean_data(azdias, customers, attributes_values)"
+    "azdias, customers, customers_additional, cleaning_info = data_utils.clean_data(azdias, customers, attributes_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Azdias shape - (737288, 355)\n",
-      "Customers shape - (134246, 358)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "((737288, 352), (134246, 352), (134246, 3))"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Azdias shape -\",azdias.shape)\n",
-    "print(\"Customers shape -\",customers.shape)"
+    "azdias.shape, customers.shape, customer_extra_cols.shape"
    ]
   },
   {
@@ -10180,31 +10210,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "azdias.to_csv('./data/Azdias_cleaned.csv', index=False)\n",
-    "customers.to_csv('./data/Customers_cleaned.csv', index=False)"
+    "#azdias.to_csv('./data/Azdias_cleaned.csv', index=False)\n",
+    "#customers.to_csv('./data/Customers_cleaned.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cleaned Data Exists\n",
-      "Loading Cleaned Azdias and Customers Data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "azdias, customers, attributes_values, attributes_info = load_avarto_data(clean=True)"
+    "#azdias, customers, attributes_values, attributes_info = load_avarto_data(clean=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -10249,20 +10277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\namod001\\Anaconda3\\envs\\Python3.7\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning: Columns (18,19) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mailout_train = pd.read_csv('./data/Udacity_MAILOUT_052018_TRAIN.csv')"
+    "# mailout_train = pd.read_csv('./data/Udacity_MAILOUT_052018_TRAIN.csv')"
    ]
   },
   {
@@ -10299,20 +10318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\namod001\\Anaconda3\\envs\\Python3.7\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3063: DtypeWarning: Columns (18,19) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mailout_test = pd.read_csv('./data/Udacity_MAILOUT_052018_TEST.csv')"
+    "# mailout_test = pd.read_csv('./data/Udacity_MAILOUT_052018_TEST.csv')"
    ]
   },
   {
