saved cleaned data to csv files

--- a/Arvato Project Workbook.ipynb
+++ b/Arvato Project Workbook.ipynb
@@ -10210,12 +10210,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#azdias.to_csv('./data/Azdias_cleaned.csv', index=False)\n",
-    "#customers.to_csv('./data/Customers_cleaned.csv', index=False)"
+    "azdias.to_csv('./data/Azdias_cleaned.csv', index=False)\n",
+    "customers.to_csv('./data/Customers_cleaned.csv', index=False)\n",
+    "customers_additional.to_csv('./data/Customer_Additional_cleaned.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking if the dataframes are saved correctly by loading them and checking for sizes."
    ]
   },
   {
@@ -10224,7 +10232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#azdias, customers, attributes_values, attributes_info = load_avarto_data(clean=True)"
+    "azdias, customers, attributes_values, attributes_info = load_avarto_data(clean=True)"
    ]
   },
   {
@@ -10232,7 +10240,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "azdias.shape, customers.shape, customer_extra_cols.shape"
+   ]
   },
   {
    "cell_type": "code",
