updated jupyter text

--- a/Arvato Project Workbook.ipynb
+++ b/Arvato Project Workbook.ipynb
@@ -12628,7 +12628,7 @@
    "cell_type": "code",
    "execution_count": 115,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -13976,13 +13976,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14293,6 +14286,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.1. Selecting the Evaluation Metric\n",
+    "\n",
     "The data is highly imbalanced. We have more thn 40 thousand - `0` responses and only 532 - `1` responses. Accuracy will be a bad metric to choose for this problem since the accuracy might always be more than 98% even if the model predicts all zeros. Since `42430/(42430+532)*100 = 98.7 %`. So, even if the model predicts zero for all the data points we will end up with having accuracy 98.7% which does not make sense in this case.\n",
     "\n",
     "To address this imbalance while evaluating the model we need to chose a metric which will take this class imbalance into accounts. The usual metrics used for imbalanced classification are *Precision and Recall* or *Area under Receiver Operating Curve (AUROC)*. \n",
@@ -14302,31 +14297,33 @@
     "* Confusion Matrix: is a `2x2` matrix in case of binary classification problems which shows the number of values predicted correctly and the number of values predicted wrongly. The confusion matrix is the base for any classification metric, even accuracy can be calculated from the values inside confusion matrix.\n",
     "\n",
     "Terms inside confusion matrix:\n",
-    "* **True Positive (TP)** -\n",
+    "* **True Positives (TP)** - Number of positive observations predicted as positive\n",
+    "* **True Negatives (TN)** - Number of negative observations predicted as negative\n",
+    "* **False Negatives (FN)** - Number of positive observations predicted as negative\n",
+    "* **False Positives (FP)** - Number of negative observations predicted as positive\n",
     "\n",
     "\n",
-    "# EXPLAIN HERE\n",
+    "**Precision and Recall**:\n",
+    "* Precision = TP / (TP + FP)\n",
+    "* Recall = TP / (TP + FN)\n",
+    "\n",
+    "**ROC curve**\n",
+    "* True Positive Rate = TP / (TP + FN)\n",
+    "* False Positive Rate = FP / (FP + TN)\n",
+    "\n",
+    "From the formulae above we can intuitively understand that recall and precision are concentrated towards positive examples i.e. if we care about the performance on the positive examples we can choose these metrics. ([Shir Meir Lador\n",
+    "](https://towardsdatascience.com/what-metrics-should-we-use-on-imbalanced-data-set-precision-recall-roc-e2e79252aeba))\n",
+    "\n",
+    "But ROC metrics are able to measure the ability of the model to distinguish between classes i.e. these metrics take into account the predictions of both classes into account.  ([Shir Meir Lador\n",
+    "](https://towardsdatascience.com/what-metrics-should-we-use-on-imbalanced-data-set-precision-recal-roc-e2e79252aeba))\n",
+    "\n",
+    "For this problem, we need to be able to tell whether a person will be a future possible customer. AUROC metric which considers both true positive rate and false positive rate seem to be a good choice for this problem, since we want to be able to correctly predict both cases i.e. whether a person becomes a customer or not. Since, Both these predictions are important for us.\n",
     "\n",
     "\n",
-    "https://towardsdatascience.com/what-metrics-should-we-use-on-imbalanced-data-set-precision-recall-roc-e2e79252aeba\n",
-    "https://towardsdatascience.com/metrics-for-imbalanced-classification-41c71549bbb5\n",
+    "### 2.2. Cleaning data for Modelling\n",
     "\n",
-    "* Precision and Recall\n",
-    "\n",
-    "* AUROC "
+    "Before trying out different models, we should also preprocess the data given here. We will follow the same cleaning steps we performed for the customers and general population data here."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -14482,7 +14479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setting the benchmark\n",
+    "### 2.3. Setting the benchmark\n",
     "\n",
     "Training a Logistic regression model on unscaled data to set a benchmark performance that we aim to improve upon."
    ]
@@ -14603,13 +14600,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Trying out different models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### 2.4. Trying out different models\n",
+    "\n",
+    "\n",
     "#### Scaling data"
    ]
   },
@@ -14948,11 +14941,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 2.5 Grid Search \n",
+    "\n",
+    "#### AdaBoostClassifier"
+   ]
   },
   {
    "cell_type": "code",
@@ -15033,57 +15028,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.  , 0.  , 0.01, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.02, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.02, 0.  , 0.03, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.01, 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.04, 0.02, 0.  , 0.  , 0.01, 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.53, 0.01, 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.02, 0.  , 0.01, 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.01, 0.  , 0.  , 0.02, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.01, 0.  , 0.01, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.02, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.02, 0.01, 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.02, 0.  , 0.  , 0.  , 0.  , 0.  , 0.02, 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.02, 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.03, 0.  , 0.  , 0.01, 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.01, 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.01, 0.  , 0.  , 0.  , 0.03, 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.02, 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ])"
-      ]
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "best_adaboost.feature_importances_"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 218,
    "metadata": {},
    "outputs": [],
@@ -15144,25 +15088,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### XGBClassifier"
+   ]
   },
   {
    "cell_type": "code",
@@ -15285,20 +15215,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -15325,6 +15241,13 @@
    ],
    "source": [
     "mailout_test = pd.read_csv('./data/Udacity_MAILOUT_052018_TEST.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning Test data"
    ]
   },
   {
@@ -15355,6 +15278,15 @@
     "mailout_test_LNR = mailout_test[\"LNR\"]\n",
     "mailout_test = clean_data_for_supervised(azdias, mailout_test, attributes_values)\n",
     "mailout_test = pd.DataFrame(scaler.transform(mailout_test), columns = mailout_test.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fitting the best models on complete train data and Making predictions on test data\n",
+    "\n",
+    "##### Adaboost"
    ]
   },
   {
@@ -15472,6 +15404,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### XGBoost"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 176,
    "metadata": {},
@@ -15479,13 +15418,6 @@
    "source": [
     "best_xgb.fit(mailout_train, labels)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
